event home page view done

--- a/EduHomeUI/Views/Home/Index.cshtml
+++ b/EduHomeUI/Views/Home/Index.cshtml
@@ -205,13 +205,16 @@
                 {
                     <div class="@(eventCount < 3 ? "single-event mb-35" : "single-event")">
                         <div class="event-date">
-                            <h3><a href="event-details.html"><span>@newEvent.Date</span></a></h3>
+                            <h3><a href="event-details.html">
+                                    <span>@newEvent.Date.ToString("dd")</span><br />
+                                    <span>@newEvent.Date.ToString("MMM")</span>
+                            </a></h3>
                         </div>
                         <div class="event-content text-start">
                             <div class="event-content-left">
                                 <h4><a href="event-details.html">@newEvent.Title</a></h4>
                                 <ul>
-                                    <li><i class="fa fa-clock-o"></i>@newEvent.StartTime - @newEvent.EndTime</li>
+                                    <li><i class="fa fa-clock-o"></i>@newEvent.StartTime.ToString("HH:mm") - @newEvent.EndTime.ToString("HH:mm")</li>
                                     <li><i class="fa fa-map-marker"></i>@newEvent.Venue</li>
                                 </ul>
                             </div>
@@ -226,74 +229,33 @@
 
             </div>
             <div class="col-lg-6 pt-5 pt-lg-0">
-                <div class="single-event mb-35">
-                    <div class="event-date">
-                        <h3><a href="event-details.html">12 <span>June</span></a></h3>
-                    </div>
-                    <div class="event-content text-start">
-                        <div class="event-content-left">
-                            <h4><a href="event-details.html">MATHEMATICAL WORKSHOP</a></h4>
-                            <ul>
-                                <li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-                                <li><i class="fa fa-map-marker"></i>New Yourk City</li>
-                            </ul>
+                @{
+                    int eventCountEvent = 0;
+                }
+
+                @foreach (var newEvent in Model.Events.OrderByDescending(e => e.Date).Skip(4).Take(4))
+                {
+                    <div class="@(eventCount < 3 ? "single-event mb-35" : "single-event")">
+                        <div class="event-date">
+                            <h3><a href="event-details.html">@newEvent.Date.Day <span>@newEvent.Date.ToString("MMMM")</span></a></h3>
                         </div>
-                        <div class="event-content-right">
-                            <a class="default-btn" href="event-details.html">join now</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="single-event mb-35">
-                    <div class="event-date">
-                        <h3><a href="event-details.html">10 <span>June</span></a></h3>
-                    </div>
-                    <div class="event-content text-start">
-                        <div class="event-content-left">
-                            <h4><a href="event-details.html">WORDPRESS AUTHOR MEET UP</a></h4>
-                            <ul>
-                                <li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-                                <li><i class="fa fa-map-marker"></i>New Yourk City</li>
-                            </ul>
-                        </div>
-                        <div class="event-content-right">
-                            <a class="default-btn" href="event-details.html">join now</a>
+                        <div class="event-content text-start">
+                            <div class="event-content-left">
+                                <h4><a href="event-details.html">@newEvent.Title</a></h4>
+                                <ul>
+                                    <li><i class="fa fa-clock-o"></i>@newEvent.StartTime.ToString("h:mm tt") - @newEvent.EndTime.ToString("h:mm tt")</li>
+                                    <li><i class="fa fa-map-marker"></i>@newEvent.Venue</li>
+                                </ul>
+                            </div>
+                            <div class="event-content-right">
+                                <a class="default-btn" href="event-details.html">join now</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="single-event mb-35">
-                    <div class="event-date">
-                        <h3><a href="event-details.html">08 <span>June</span></a></h3>
-                    </div>
-                    <div class="event-content text-start">
-                        <div class="event-content-left">
-                            <h4><a href="event-details.html">DIGITAL MARKETING ANALYSIS</a></h4>
-                            <ul>
-                                <li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-                                <li><i class="fa fa-map-marker"></i>New Yourk City</li>
-                            </ul>
-                        </div>
-                        <div class="event-content-right">
-                            <a class="default-btn" href="event-details.html">join now</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="single-event">
-                    <div class="event-date">
-                        <h3><a href="event-details.html">06 <span>June</span></a></h3>
-                    </div>
-                    <div class="event-content text-start">
-                        <div class="event-content-left">
-                            <h4><a href="event-details.html">WROKSHOP ON UI &amp; UX</a></h4>
-                            <ul>
-                                <li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-                                <li><i class="fa fa-map-marker"></i>New Yourk City</li>
-                            </ul>
-                        </div>
-                        <div class="event-content-right">
-                            <a class="default-btn" href="event-details.html">join now</a>
-                        </div>
-                    </div>
-                </div>
+
+                    eventCountEvent++;
+                }
+
             </div>
         </div>
     </div>
