--- a/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
@@ -1,4 +1,5 @@
-﻿<!doctype html>
+﻿@using EduHome.DataAccess.Contexts;
+<!doctype html>
 <html lang="en">
 
 
@@ -419,7 +420,14 @@
                                 data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <img class="rounded-circle header-profile-user" src="/adminAssets/images/users/avatar-3.jpg"
                                  alt="Header Avatar">
-                            <span class="d-none d-xl-inline-block ms-1" key="t-henry">Rahil</span>
+
+                            <span class="d-none d-xl-inline-block ms-1" key="t-henry">
+                                @if (User.Identity.IsAuthenticated)
+                                {
+                                    <span>Welcome back, @ViewBag.FirstName!</span>
+                                }
+                            </span>
+
                             <i class="mdi mdi-chevron-down d-none d-xl-inline-block"></i>
                         </button>
                         <div class="dropdown-menu dropdown-menu-end">
@@ -1022,7 +1030,7 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js" integrity="sha512-rstIgDs0xPgmG6RX1Aba4KV5cWJbAMcvRCVmglpam9SoHZiUCyQVDdH2LPlxoHtrv17XWblE/V/PP+Tr04hbtA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/4.0.0/jquery.validate.unobtrusive.min.js" integrity="sha512-xq+Vm8jC94ynOikewaQXMEkJIOBp7iArs3IhFWSWdRT3Pq8wFz46p+ZDFAR7kHnSFf+zUv52B3prRYnbDRdgog==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-@*
+        @*
         <link rel="stylesheet" href="https://cdn.datatables.net/1.13.5/css/jquery.dataTables.css" />
 
         <script src="https://cdn.datatables.net/1.13.5/js/jquery.dataTables.js"></script>*@
