order courses viewdone

--- a/EduHomeUI/Views/Shared/_Layout.cshtml
+++ b/EduHomeUI/Views/Shared/_Layout.cshtml
@@ -89,11 +89,7 @@
 										</li>
 										<li><a href="about.html">About</a></li>
 										<li>
-											<a href="course.html">courses</a>
-											<ul>
-												<li><a href="course.html">courses</a></li>
-												<li><a href="course-details.html">courses details</a></li>
-											</ul>
+											<a asp-controller="Course" asp-action="Index">courses</a>
 										</li>
 										<li>
 											<a href="event.html">event</a>
