course details done

--- a/EduHomeUI/Views/Course/Index.cshtml
+++ b/EduHomeUI/Views/Course/Index.cshtml
@@ -32,7 +32,7 @@
                         </div>
                         <div class="course-content">
                             <h3><a asp-action="Details" asp-route-id="@course.Id">@course.Name</a></h3>
-                            <p>@course.Description</p>
+                            @Html.Raw(course.Description)
                             <a class="default-btn" asp-action="Details" asp-route-id="@course.Id">read more</a>
                         </div>
                     </div>
