Event view added

--- a/EduHomeUI/Views/Shared/_Layout.cshtml
+++ b/EduHomeUI/Views/Shared/_Layout.cshtml
@@ -92,13 +92,7 @@
 											<a asp-controller="Course" asp-action="Index">courses</a>
 										</li>
 										<li>
-											<a href="event.html">event</a>
-											<ul>
-												<li><a href="event.html">event</a></li>
-												<li><a href="event-left-side-bar.html">event left sidebar</a></li>
-												<li><a href="event-right-side-bar.html">event right sidebar</a></li>
-												<li><a href="event-details.html">event details</a></li>
-											</ul>
+											<a asp-controller="Event" asp-action="Index">event</a>
 										</li>
 										<li class="hidden-sm">
 											<a href="teacher.html">teacher</a>
