--- a/EduHomeUI/Views/Event/Index.cshtml
+++ b/EduHomeUI/Views/Event/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="event-area three text-center pt-150 pb-150">
     <div class="container">
         <div class="row">
-            @foreach (var newEvent in Model.Events)
+            @foreach (var newEvent in Model.Events.OrderByDescending(e => e.Date).Take(9))
             {
                 <div class="col-lg-4 col-md-6">
                     <div class="single-event mb-60">
