--- a/EduHomeUI/Views/Event/Index.cshtml
+++ b/EduHomeUI/Views/Event/Index.cshtml
@@ -1,6 +1,23 @@
 ﻿@using EduHomeUI.ViewModels.EventViewModels;
 @model EventIndexViewModel     
-  
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+<!-- Banner Area Start -->
+<div class="banner-area-wrapper">
+    <div class="banner-area text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="banner-content-wrapper">
+                        <div class="banner-content">
+                            <h2>event</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Banner Area End -->
 <!-- Event Start -->
 <div class="event-area three text-center pt-150 pb-150">
     <div class="container">
@@ -10,7 +27,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-event mb-60">
                         <div class="event-img">
-                            <a href="event-details.html">
+                            <a asp-action="Details" asp-route-id="@newEvent.Id">
                                 <img src="@newEvent.ImagePath" alt="@newEvent.ImageName">
                                 <div class="course-hover">
                                     <i class="fa fa-link"></i>
@@ -21,13 +38,13 @@
                             </div>
                         </div>
                         <div class="event-content text-start">
-                            <h4><a href="event-details.html">@newEvent.Title</a></h4>
+                            <h4><a asp-action="Details" asp-route-id="@newEvent.Id">@newEvent.Title</a></h4>
                             <ul>
                                 <li><span>time:</span> @newEvent.StartTime.ToString("HH:mm") - @newEvent.EndTime.ToString("HH:mm")</li>
                                 <li><span>venue</span>@newEvent.Venue</li>
                             </ul>
                             <div class="event-content-right">
-                                <a class="default-btn" href="event-details.html">join now</a>
+                                <a class="default-btn" asp-action="Details" asp-route-id="@newEvent.Id">join now</a>
                             </div>
                         </div>
                     </div>
