Techer teacher details redirection done

--- a/EduHomeUI/Views/Shared/_Layout.cshtml
+++ b/EduHomeUI/Views/Shared/_Layout.cshtml
@@ -95,11 +95,8 @@
 											<a asp-controller="Event" asp-action="Index">event</a>
 										</li>
 										<li class="hidden-sm">
-											<a href="teacher.html">teacher</a>
-											<ul>
-												<li><a href="teacher.html">teacher</a></li>
-												<li><a href="teacher-details.html">teacher details</a></li>
-											</ul>
+											<a asp-controller="Teacher" asp-action="Index">teacher</a>
+
 										</li>
 										<li>
 											<a href="blog.html">blog</a>
