--- a/EduHomeUI/Views/Shared/_Layout.cshtml
+++ b/EduHomeUI/Views/Shared/_Layout.cshtml
@@ -99,13 +99,7 @@
 
 										</li>
 										<li>
-											<a href="blog.html">blog</a>
-											<ul>
-												<li><a href="blog.html">blog</a></li>
-												<li><a href="blog-left-side-bar.html">blog left sidebar</a></li>
-												<li><a href="blog-right-side-bar.html">blog righ sidebar</a></li>
-												<li><a href="blog-details.html">blog details</a></li>
-											</ul>
+											<a asp-controller="Blog" asp-action="Index">blog</a>
 										</li>
 										<li><a href="contact.html">Contact</a></li>
 										<li><a href="contact.html">Buy Now</a>
