--- a/EduHomeUI/Areas/EHMasterPanel/Views/Blog/Create.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Blog/Create.cshtml
@@ -47,7 +47,7 @@
                     <div class="row mb-3">
                         <label asp-for="CommentCount" class="col-md-3 col-form-label">CommentCount</label>
                         <div class="col-sm-9">
-                            <input asp-for="CommentCount" class="form-control" />
+                            <input asp-for="CommentCount" class="form-control" disabled />
                             <span asp-validation-for="CommentCount" class="text-danger"></span>
                         </div>
                     </div>
