home redirection added to admin panel

--- a/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
@@ -467,7 +467,8 @@
                                 <span key="t-dashboards">Dashboards</span>
                             </a>
                             <ul class="sub-menu" aria-expanded="false">
-                                <li><a asp-controller="Dashboard" asp-action="Index">Home</a></li>
+                                <li><a asp-controller="Home" asp-area="" asp-action="Index">Home Edu Home</a></li>
+                                <li><a asp-controller="Dashboard" asp-action="Index">Home Admin Panel</a></li>
                                 <li><a asp-controller="AppUser" asp-action="Index">Users</a></li>
                                 <li><a asp-controller="CourseCategory" asp-action="Index">Categories</a></li>
                                 <li><a asp-controller="Course" asp-action="Index">Courses</a></li>
