--- a/EduHomeUI/Views/Shared/_Layout.cshtml
+++ b/EduHomeUI/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
 	<link rel="stylesheet" href="/assets/css/material-design-iconic-font.min.css">
 	<link rel="stylesheet" href="/assets/css/style.css">
 	<link rel="stylesheet" href="/assets/css/responsive.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 	<script src="/assets/js/vendor/modernizr-3.11.2.min.js"></script>
 </head>
 <body>
@@ -215,6 +216,7 @@
 	<script src="/assets/js/jquery.nicescroll.min.js"></script>
 	<script src="/assets/js/plugins.js"></script>
 	<script src="/assets/js/main.js"></script>
+
 	@RenderSection("Script", false)
 </body>
 
