Setting index view done

--- a/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
@@ -480,6 +480,7 @@
                                 <li><a asp-controller="Teacher" asp-action="Index">Teachers</a></li>
                                 <li><a asp-controller="Notice" asp-action="Index">Notices</a></li>
                                 <li><a asp-controller="Blog" asp-action="Index">Blogs</a></li>
+                                <li><a asp-controller="Setting" asp-action="Index">Blogs</a></li>
                             </ul>
                         </li>
 
