header logo viewComponent added

--- a/EduHomeUI/Views/Shared/Components/Header/Default.cshtml
+++ b/EduHomeUI/Views/Shared/Components/Header/Default.cshtml
@@ -38,7 +38,7 @@
 				<div class="row">
 					<div class="col-md-3 col-sm-5 col-6">
 						<div class="logo">
-							<a asp-controller="Home" asp-action="Index"><img src="/assets/img/logo/logo2.png" alt="eduhome" /></a>
+							<a asp-controller="Home" asp-action="Index"><img src="@Model["logo"]" alt="eduhome" /></a>
 						</div>
 					</div>
 					<div class="col-md-9 col-sm-7 col-6">
@@ -49,13 +49,6 @@
 									<ul>
 										<li>
 											<a asp-controller="Home" asp-action="Index">Home</a>
-											<ul>
-												<li><a href="index.html">Home One</a></li>
-												<li><a href="index-2.html">Home Two</a></li>
-												<li><a href="index-3.html">Home Three</a></li>
-												<li><a href="index-4.html">Home Four</a></li>
-												<li><a href="index-5.html">Home Five</a></li>
-											</ul>
 										</li>
 										<li><a href="about.html">About</a></li>
 										<li>
