setting update done

--- a/EduHomeUI/Views/Shared/Components/Header/Default.cshtml
+++ b/EduHomeUI/Views/Shared/Components/Header/Default.cshtml
@@ -81,7 +81,7 @@
 										<form id="search-form" action="#">
 											<input type="search" placeholder="Search here..." name="search" />
 											<button type="submit">
-												<span><i class="fa fa-search"></i></span>
+												<span><i class="@Model["searchicon"]"></i></span>
 											</button>
 										</form>
 									</div>
