--- a/EduHomeUI/Views/Shared/Components/Footer/Default.cshtml
+++ b/EduHomeUI/Views/Shared/Components/Footer/Default.cshtml
@@ -73,7 +73,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <p>Copyright © <a href="#">Eduhome</a> 2022. All Right Reserved</p>
+                    <p>@Model["copyright"]</p>
                 </div>
             </div>
         </div>
